# 2048-gym-env

./: LICENSE  README.md  pyproject.toml
src/: env_2048.py
src/gym_2048/: __init__.py  env_2048.py  logic.py  puzzle.py
tests/: test_logic.py
